[gd_scene load_steps=2 format=3 uid="uid://0k5vbnv4udth"]

[ext_resource type="Script" path="res://WallDialog/wall_dialog.gd" id="1_bmwkd"]

[node name="WallDialog" type="Window"]
title = "Edit Wall"
initial_position = 1
size = Vector2i(417, 129)
wrap_controls = true
transient = true
exclusive = true
unresizable = true
script = ExtResource("1_bmwkd")

[node name="WindowContainer" type="BoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
vertical = true

[node name="CoordinateContainer" type="BoxContainer" parent="WindowContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LineSegmentLabel" type="Label" parent="WindowContainer/CoordinateContainer"]
layout_mode = 2
text = "Line Segment:"

[node name="X1Entry" type="LineEdit" parent="WindowContainer/CoordinateContainer"]
layout_mode = 2
placeholder_text = "x1"
virtual_keyboard_type = 3
select_all_on_focus = true

[node name="Y1Entry" type="LineEdit" parent="WindowContainer/CoordinateContainer"]
layout_mode = 2
placeholder_text = "y1"
virtual_keyboard_type = 3
select_all_on_focus = true

[node name="X2Entry" type="LineEdit" parent="WindowContainer/CoordinateContainer"]
layout_mode = 2
placeholder_text = "x2"
virtual_keyboard_type = 3
select_all_on_focus = true

[node name="Y2Entry" type="LineEdit" parent="WindowContainer/CoordinateContainer"]
layout_mode = 2
placeholder_text = "y2"
virtual_keyboard_type = 3
select_all_on_focus = true

[node name="DynamicCheckboxContainer" type="BoxContainer" parent="WindowContainer"]
layout_mode = 2

[node name="CheckBoxLabel" type="Label" parent="WindowContainer/DynamicCheckboxContainer"]
layout_mode = 2
text = "Dynamic:"

[node name="DynamicCheckBox" type="CheckBox" parent="WindowContainer/DynamicCheckboxContainer"]
layout_mode = 2

[node name="DynamicMotionTypeContainer" type="BoxContainer" parent="WindowContainer"]
layout_mode = 2

[node name="MotionTypeLabel" type="Label" parent="WindowContainer/DynamicMotionTypeContainer"]
layout_mode = 2
text = "Motion Type:"

[node name="MotionTypeOption" type="OptionButton" parent="WindowContainer/DynamicMotionTypeContainer"]
layout_mode = 2
disabled = true
item_count = 2
popup/item_0/text = "Oscillate"
popup/item_1/text = "Rotate"
popup/item_1/id = 1

[node name="OscillateControlsContainer" type="BoxContainer" parent="WindowContainer"]
visible = false
layout_mode = 2
vertical = true

[node name="VectorContainer" type="BoxContainer" parent="WindowContainer/OscillateControlsContainer"]
layout_mode = 2

[node name="VectorLabel" type="Label" parent="WindowContainer/OscillateControlsContainer/VectorContainer"]
layout_mode = 2
text = "Movement Vector:"

[node name="VectorX" type="LineEdit" parent="WindowContainer/OscillateControlsContainer/VectorContainer"]
layout_mode = 2
text = "1"
placeholder_text = "x"
select_all_on_focus = true

[node name="VectorY" type="LineEdit" parent="WindowContainer/OscillateControlsContainer/VectorContainer"]
layout_mode = 2
text = "0"
placeholder_text = "y"
select_all_on_focus = true

[node name="VectorZ" type="LineEdit" parent="WindowContainer/OscillateControlsContainer/VectorContainer"]
layout_mode = 2
text = "0"
placeholder_text = "z"
select_all_on_focus = true

[node name="SpeedContainer" type="BoxContainer" parent="WindowContainer/OscillateControlsContainer"]
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="WindowContainer/OscillateControlsContainer/SpeedContainer"]
layout_mode = 2
text = "Speed:"

[node name="SpeedEntry" type="LineEdit" parent="WindowContainer/OscillateControlsContainer/SpeedContainer"]
layout_mode = 2
text = "1"
select_all_on_focus = true

[node name="AmplitudeContainer" type="BoxContainer" parent="WindowContainer/OscillateControlsContainer"]
layout_mode = 2

[node name="AmplitudeLabel" type="Label" parent="WindowContainer/OscillateControlsContainer/AmplitudeContainer"]
layout_mode = 2
text = "Amplitude:"

[node name="AmplitudeEntry" type="LineEdit" parent="WindowContainer/OscillateControlsContainer/AmplitudeContainer"]
layout_mode = 2
text = "1"
select_all_on_focus = true

[node name="RotateControlsContainer" type="BoxContainer" parent="WindowContainer"]
visible = false
layout_mode = 2
vertical = true

[node name="AxisContainer" type="BoxContainer" parent="WindowContainer/RotateControlsContainer"]
layout_mode = 2

[node name="AxisLabel" type="Label" parent="WindowContainer/RotateControlsContainer/AxisContainer"]
layout_mode = 2
text = "Center Axis Point:"

[node name="AxisX" type="LineEdit" parent="WindowContainer/RotateControlsContainer/AxisContainer"]
layout_mode = 2
text = "5"
placeholder_text = "x"
select_all_on_focus = true

[node name="AxisY" type="LineEdit" parent="WindowContainer/RotateControlsContainer/AxisContainer"]
layout_mode = 2
text = "5"
placeholder_text = "y"
select_all_on_focus = true

[node name="SpeedContainer" type="BoxContainer" parent="WindowContainer/RotateControlsContainer"]
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="WindowContainer/RotateControlsContainer/SpeedContainer"]
layout_mode = 2
text = "Speed:"

[node name="SpeedEntry" type="LineEdit" parent="WindowContainer/RotateControlsContainer/SpeedContainer"]
layout_mode = 2
text = "1"
select_all_on_focus = true

[node name="ButtonsContainer" type="BoxContainer" parent="WindowContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ConfirmButton" type="Button" parent="WindowContainer/ButtonsContainer"]
layout_mode = 2
text = "Confirm"

[node name="CancelButton" type="Button" parent="WindowContainer/ButtonsContainer"]
layout_mode = 2
text = "Cancel"

[node name="ErrorDialog" type="AcceptDialog" parent="."]
title = "Error!"
ok_button_text = "Ok lemme fix that rq"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="toggled" from="WindowContainer/DynamicCheckboxContainer/DynamicCheckBox" to="." method="_on_dynamic_check_box_toggled"]
[connection signal="item_selected" from="WindowContainer/DynamicMotionTypeContainer/MotionTypeOption" to="." method="_on_motion_type_option_item_selected"]
[connection signal="pressed" from="WindowContainer/ButtonsContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="WindowContainer/ButtonsContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
